Closed Bug 382744 Opened 17 years ago Closed 17 years ago

Backwards assertion checks in XPCNativeScriptableInfo::Construct

Categories

(Core :: XPConnect, defect)

defect
Not set
trivial

Tracking

()

VERIFIED FIXED

People

(Reporter: mozbugs, Assigned: mattwillis)

Details

(Keywords: verified1.8.1.5)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.4) Gecko/20070531 Firefox/2.0.0.3 Flock/0.8.0.99
Build Identifier: 

The assertions in the beginning of XPCNativeScriptableInfo::Construct are backwards, the code should check sci before checking sci->GetCallback(). This probably has no practical effects, but is good to fix from a code hygiene standpoint.

Reproducible: Always
Attachment #266850 - Attachment description: Trivial patch → patch against trunk
Attachment #266850 - Flags: review?(dbaron)
confirming
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Assignee: nobody → lilmatt
Comment on attachment 266850 [details] [diff] [review]
patch against trunk

I'm not actually an XPConnect peer, but this is trivial enough, so r=dbaron.
Attachment #266850 - Flags: review?(dbaron) → review+
Attachment #266850 - Flags: superreview?(shaver)
Attachment #266850 - Flags: superreview?(shaver) → superreview+
Comment on attachment 266850 [details] [diff] [review]
patch against trunk

patch landed on trunk

requesting a1815
Attachment #266850 - Flags: approval1.8.1.5?
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment on attachment 266850 [details] [diff] [review]
patch against trunk

approved for 1.8.1.5, a=dveditz for release-drivers
Attachment #266850 - Flags: approval1.8.1.5? → approval1.8.1.5+
Patch landed on MOZILLA_1_8_BRANCH

-> fixed1.8.1.5
Keywords: fixed1.8.1.5
Verified to be present in both current branch and trunk.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: