bug 382744 - Correct backwards assertion check in XPCNativeScriptableInfo.  Patch by Manish Singh <manish@flock.com>, r=dbaron, sr=shaver